fix: replaced collapse button with better semantics elements

--- a/src/components/Collapse/Collapse.sass
+++ b/src/components/Collapse/Collapse.sass
@@ -2,13 +2,12 @@
   position: relative
   @media (max-width: 576px)
     min-height: 30px
-  &:not(:last-child)
-    margin-bottom: 30px
-    @media (max-width: 576px)
+    &:not(:last-child)
       margin-bottom: 20px
 
-@mixin collapse__button
+@mixin collapse__header
   position: absolute
+  box-sizing: border-box
   display: flex
   align-items: center
   justify-content: space-between
@@ -23,6 +22,7 @@
     border-radius: 5px
 
 @mixin collapse__title
+  font-weight: 500
   color: white
   @media (max-width: 576px)
     font-size: 13px
@@ -61,8 +61,11 @@
 .collapse-large
   @include collapse
   min-height: 54px
-  &__button
-    @include collapse__button
+  @media (min-width: 576px)
+    &:not(:last-child)
+      margin-bottom: 30px
+  &__header
+    @include collapse__header
     height: 54px
     padding: 10px 20px
     border-radius: 5px
@@ -82,12 +85,18 @@
 .collapse-medium
   @include collapse
   min-height: 52px
-  width: 45%
+  width: 0px
   flex-grow: 1
+  margin-bottom: 0px
   @media (max-width: 768px)
     width: 100%
-  &__button
-    @include collapse__button
+    &:not(:last-child)
+      margin-bottom: 30px
+  @media (max-width: 576px)
+    &:not(:last-child)
+      margin-bottom: 20px
+  &__header
+    @include collapse__header
     height: 52px
     padding: 10px 20px
     border-radius: 10px
